fixed spacing on 16:9

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,41 +9,44 @@
 }
 
 body {
-  background-color: #131313; /* Set the body background color */
-  color: white; /* Assuming you want white text against the dark background */
-}
-
-.gradient-circle, .gradient-circle-bottom {
-  position: relative; /* No change needed here based on your last update */
-  pointer-events: none;
-  z-index: -1; 
-  width: 100vw;
-  opacity: 0.5;
-  filter: blur(40px);
+  @apply dark:bg-black dark:text-white;
 }
 
 .gradient-circle {
-  top: 0;
+  position: absolute;
+  pointer-events: none;
+  z-index: 100;
+  top: -30px;
   height: 40px;
-  background: radial-gradient(circle, rgba(248, 107, 223, 1) 0%, rgba(107, 107, 248, 0.8) 100%);
+  width: 100vw;
+  opacity: 0.5;
+  filter: blur(40px);
+  background: radial-gradient(
+    circle,
+    rgba(248, 107, 223, 1) 0%,
+    rgba(107, 107, 248, 0.8) 100%
+  );
 }
-
 .gradient-circle-bottom {
-  bottom: 0;
+  position: absolute;
+  pointer-events: none;
+  z-index: 100;
+  bottom: -20px;
   height: 30px;
-  background: radial-gradient(circle, rgba(248, 107, 223, 1) 0%, rgba(107, 107, 248, 0.8) 100%);
-}
-
-@media (max-width: 768px) {
-  .gradient-circle, .gradient-circle-bottom {
-    /* Adjust styles for mobile as needed */
-  }
+  width: 100vw;
+  opacity: 0.5;
+  filter: blur(40px);
+  background: radial-gradient(
+    circle,
+    rgba(248, 107, 223, 1) 0%,
+    rgba(107, 107, 248, 0.8) 100%
+  );
 }
 
 .gradient-shadow:hover::before {
   content: "";
   z-index: -1;
-  position: relative;
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
@@ -56,14 +59,30 @@ body {
   border-radius: inherit;
 }
 
+/* 
+* Prevents issues when the parent creates a 
+* stacking context. (For example, using the transform
+* property )
+*/
 .gradient-shadow:hover::after {
   content: "";
   z-index: -1;
-  position: relative;
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   background: inherit;
   border-radius: inherit;
+}
+
+@media screen and (min-aspect-ratio: 16/10) {
+  body {
+    box-sizing: border-box;
+    width: calc(100% - 5vw); /* Adjust width to account for padding */
+    padding-left: 5vw;
+    padding-right: 5vw;
+    margin: 0 auto; /* Center the content */
+    overflow-x: hidden; /* Hide horizontal overflow */
+  }
 }
